--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@
 }
 
 .jumbotron {
-  background-image:url('http://goo.gl/04j7Nn');
-  height: 500px;
+  background-image:url('http://wertzortho.com/wp-content/uploads/2013/05/Wertz-Google.jpg');
+  height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
 }
